--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <!--Personal Information-->
             <section id="personal-info">
                 <h3>Personal Information</h3>
-                <p><b>Name: Hashi Hussain</b></p>
+                <p><b>Name: Hashir Hussain</b></p>
                 <p><b>Phone: 0317-2140131</b></p>
                 <p><b>Email:</b> <a href="mailto:hashirhussain322@gmail.com">hashirhussain322@gmail.com</a></p>
                 <p><b>LinkedIn: </b> <a href="https://www.linkedin.com/in/hashir-hussain-1a5a3b2ba/"
